--- a/style.css
+++ b/style.css
@@ -9126,6 +9126,8 @@ main#primary > section.hero-block > .hero-container {
   .occasions-block .why-us-heading {
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: 0;
+    padding-bottom: 0;
   }
   .occasions-block .why-us-heading .why-us-heading-line {
     display: block;
@@ -9197,6 +9199,7 @@ main#primary > section.hero-block > .hero-container {
   .occasions-block .occasions-row3-card {
     min-height: 310px;
   }
+  .occasions-block .why-us-item.why-us-item-1 .why-us-item-title,
   .occasions-block .why-us-item.why-us-item-2 .why-us-item-title,
   .occasions-block .why-us-item-3 .why-us-item-title,
   .occasions-block .why-us-item-4 .why-us-item-title,
